# figure-counter

./: .gitignore  CMakeLists.txt  README.MD  figure_counter.cpp  figure_counter.hpp  grid.hpp
lib/: figure_counter.hpp  figure_counter_test.cpp  grid.hpp
